data/derived/comb/progs/unify/prog7410.ml.out
Characters 263-284:
  removeZero (add (padZero l1 l2));;
             ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int * int list
       but an expression was expected of type int list
